<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/main_menu_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/title_activity_main_menu"
            android:textColor="#add8e6"
            android:textSize="50sp" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center">

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/create_button"
                android:minLines="1"
                android:text="@string/create_button" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/gallery_btn"
                android:text="@string/gallery_button" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/about_btn"
                android:text="@string/about_button" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/quit_btn"
                android:text="@string/quit_button" />
        </TableRow>
    </TableLayout>

</LinearLayout>
