<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TableRow
        android:layout_margin="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_margin="10sp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_ip_text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp" />

    </TableRow>


    <TableRow
        android:layout_margin="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_server_text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/server_ip_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_margin="10sp"
        android:gravity="center">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_margin="10sp"
        android:gravity="center">

    <Button
            android:id="@+id/btn_set_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_server"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear_cache"
            android:textColor="#000000"
            android:textSize="16sp" />
    </TableRow>

</TableLayout>